--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1 class="text-3xl font-bold underline text-green-500 ">
-  Hello world!
-</h1>
+<app-navbar></app-navbar>
+<img [src]="'assets/Chronicles-of-the-Demon-Faction-ตำนานการเกิดใหม่ในลัทธิมาร.jpg'"/>
