--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,1 +1,50 @@
-<p>detail works!</p>
+<img src="https://cdn.novelupdates.com/images/2024/11/Chronicles-of-the-Demon-Faction.jpeg" alt="">
+<!-- <img src="asset/imagetoon/Chronicles-of-the-Demon-Faction.jpg" alt=""> -->
+<h4>Chronicles-of-the-Demon-Faction-ตำนานการเกิดใหม่ในลัทธิมาร</h4>
+<ul class="flex flex-row">
+    <li>หมวดหมู่</li>
+    <li>จำนวนเข้าชม</li>
+    <li>ยอดกดไลด์</li>
+    <li>เรตติ้ง</li>
+    <li>วันที่ลง</li>
+</ul>
+<div class="flex flex-row">
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
+        alt="Burger" />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1565098772267-60af42b81ef2.webp"
+        alt="Burger" />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1572635148818-ef6fd45eb394.webp"
+        alt="Burger" />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1494253109108-2e30c049369b.webp"
+        alt="Burger" />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1550258987-190a2d41a8ba.webp"
+        alt="Burger" />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1559181567-c3190ca9959b.webp"
+        alt="Burger" />
+    </div>
+    <div class="carousel-item">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1601004890684-d8cbf643f5f2.webp"
+        alt="Burger" />
+    </div>
+  </div>
+
+
+
