--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,17 +1,49 @@
-<img src="assets/imagetoon/I-Raised-the-Villains-Preciously.jpg" alt="">
-<img src="assets/imagetoon/Spy-X-Family.png" alt="gfddf">
-<h4>Chronicles-of-the-Demon-Faction-ตำนานการเกิดใหม่ในลัทธิมาร</h4>
-<ul class="flex-container">
-    <li>หมวดหมู่</li>
-    <li>จำนวนเข้าชม</li>
-    <li>ยอดกดไลด์</li>
-    <li>เรตติ้ง</li>
-    <li>วันที่ลง</li>
+<div class="container ">
+    <img class="h-150 w-full object-scale-down" src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt="">
+</div>
+<h2 class="pl-4 pb-4 font-bold text-xl text-center">Chronicles-of-the-Demon-Faction-ตำนานการเกิดใหม่ในลัทธิมาร</h2>
+<ul class="flex flex-row gap-3 pl-10 pb-4 opacity-50">
+    <li class="hover:underline active:underline">หมวดหมู่</li>
+    <li class="hover:underline active:underline">จำนวนเข้าชม</li>
+    <li class="hover:underline active:underline">ยอดกดไลด์</li>
+    <li class="hover:underline active:underline">เรตติ้ง</li>
+    <li class="hover:underline active:underline">วันที่ลง</li>
 </ul>
-<p>ตอนที่</p>
-<p>ข้อมูล</p>
-<p style="text-align: center;">อ่านตอนแรก</p>
+<div class="border-b-2">
+</div>
+<ul class="flex flex-row gap-3 pl-10 pt-4 pb-4 ">
+    <li class="hover:underline active:underline">ตอนที่</li>
+    <li class="hover:underline active:underline">ข้อมูล</li>
+</ul>
 
+<div class="flex flex-col items-center justify-center min-h-screen ">
+    
+    <!-- กล่องหลัก -->
+    <div class="w-full h-80 max-w-9/10 bg-black text-white p-4 rounded-lg ">
+        <button class="bg-red-500 text-white font-bold py-2 px-4 rounded" disabled>
+            ยังไม่จบ
+          </button>
+        <h2 class="text-xl font-bold mt-2">เรื่อง <span class="font-normal">ตำนานการเกิดใหม่ในลัทธิมาร</span></h2>
+        <h3 class="text-lg font-bold mt-1">ผู้แต่ง <span class="font-normal">________</span></h3>
+    </div>
 
+    <!-- กล่องเรื่องย่อ -->
+    <div class="w-full h-50 max-w-9/10 bg-black text-white p-4 rounded-lg mt-4">
+        <h2 class="text-lg font-bold">เรื่องย่อ</h2>
+        <p class="line-clamp-3 overflow-hidden">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi id eos cumque quaerat veniam error
+            voluptas recusandae optio. Asperiores iure laudantium quisquam provident eum libero cumque aperiam obcaecati
+            expedita adipisci.
+        </p>
+    </div>
 
-
+    <!-- กล่องหมวดหมู่ -->
+    <div class="w-full h-30 max-w-9/10 bg-black text-white p-4 rounded-lg mt-4">
+        <h2 class="text-lg font-bold">หมวดหมู่</h2>
+        <div class="flex gap-2 mt-2">
+            <button class="bg-gray-500 hover:bg-gray-700 font-bold py-2 px-4 rounded">โรแมนซ์</button>
+            <button class="bg-gray-500 hover:bg-gray-700 font-bold py-2 px-4 rounded">แฟนตาซี</button>
+            <button class="bg-gray-500 hover:bg-gray-700 font-bold py-2 px-4 rounded">ดราม่า</button>
+        </div>
+    </div>
+</div>
