--- a/src/app/hitmanhwa/hitmanhwa.component.html
+++ b/src/app/hitmanhwa/hitmanhwa.component.html
@@ -1,51 +1,74 @@
 <app-navbar></app-navbar>
 <!-- ลิสต์รายการหัวข้อเรื่องยอดฮิต -->
 <div class="list">
-<div class="navbar bg-base-100 shadow-sm mt-5 ">
-    <div class="navbar-start">
-      <a class="btn btn-ghost text-xl hidden">daisyUI</a>
+    <div class="navbar bg-base-100 shadow-sm mt-5 ">
+        <div class="navbar-start">
+            <a class="btn btn-ghost text-xl hidden">daisyUI</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal ">
+                <li><a href="#" class="text-xl mr-20 font-bold">ใหม่</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">จันทร์</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">อังคาร</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">พุธ</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">พฤหัส</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">ศูกร์</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">เสาร์</a></li>
+                <li><a href="#" class="text-xl mr-20  font-bold">อาทิตย์</a></li>
+            </ul>
+        </div>
+        <div class="navbar-end"></div>
     </div>
-    <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal ">
-            <li><a href="#" class="text-xl mr-20 font-bold">ใหม่</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">จันทร์</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">อังคาร</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">พุธ</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">พฤหัส</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">ศูกร์</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">เสาร์</a></li>
-            <li><a href="#" class="text-xl mr-20  font-bold">อาทิตย์</a></li>
-          </ul>
-    </div>
-    <div class="navbar-end"></div>
-  </div>
 </div>
 
 <div class="container mx-auto pt-20">
     <label class="col-span-3 text-2xl ml-15 ">เรื่องใหม่ยอดฮิต</label>
 
-        <div class="grid gap-4 grid-cols-5 h-screen grid-flow-col mt-10 ">
-            
-            <div class="col-span-2  bg-amber-700">
+    <div class="grid gap-4 grid-cols-5 h-screen grid-flow-col mt-10 ">
 
+        <div class="col-span-2 ">
+           
+            <div class="relative justify-center justify-items-center">
+                <a href="#">
+                <div class="relative max-w-xs overflow-hidden bg-cover bg-no-repeat">
+                <img src="imagetoon/The-World-After-the-end.jpg" class="max-w-xs transition duration-300 ease-in-out hover:scale-110 h-120" alt="">
             </div>
-            <div class="col-span-3  bg-amber-200">
-                <div class="text-center" *ngFor="let item of alldata">
-                    <div class="grid grid-cols-3 gap-4">
-                    <div class="col-span1 bg-amber-50">
-                    <img [src]="item.photo" class="h-50" alt="">
+            </a>
+                <div class="detail mt-10 w-120">
+                    <p class="text-xl font-bold text-gray-500">แอ็กชั่น</p>
+                    <h1 class="text-2xl font-bold">The World After the end</h1>
+                    <div class="shortstory mt-5">
+                        <label class="font-bold"> เรื่องย่อ</label>
+                        <p class="mt-5 text-sm/7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ab
+                            adipisci velit asperiores aliquid iste qui aspernatur sequi repellendus placeat dicta,
+                            fugiat architecto, harum dolore optio nam, accusantium ad perferendis voluptatem beatae fuga
+                            praesentium! Culpa repudiandae debitis asperiores nostrum voluptas totam nihil ipsam
+                            voluptatibus? Vero blanditiis odit libero minima mollitia.</p>
+                    </div>
                 </div>
-                <div class="col-span-2 bg-amber-900 ">
-                    <h1 class=" font-bold text-xl mt-5">{{ item.name }}</h1>
-                    <p class="font-bold mt-2">แนว: {{ item.style }}</p>
-                    <p class="font-bold mt-2">สถานะ: {{ item.status }}</p>
-                    <p class="font-bold mt-2 mb-3">ปีที่ออก: {{ item.year }}</p>
-                 </div>
-                </div>
             </div>
-            </div>
-
-
         </div>
+        <div class="col-span-3  ">
+            <div class="text-center shadow-sm" *ngFor="let item of alldata">
+                <a href="#" class="hover:opacity-70 transition delay-150 duration-300 ease-in-out">
+                    <div class="grid grid-cols-3 gap-4">
+                        <div class="col-span1  flex justify-center p-5">
+                            <img [src]="item.photo" class="h-50" alt="">
+                        </div>
+
+                        <div class="col-span-2  relative flex items-center justify-center">
+                            <div class="text-center">
+                                <p class="font-bold mb-3 text-gray-500 ">แนว: {{ item.style }}</p>
+                                <h1 class="font-bold text-2xl mb-3">{{ item.name }}</h1>
+                                <p class="font-bold text-gray-500 ">สถานะ: {{ item.status }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+
+    </div>
 
 </div>
