--- a/src/app/reading_page/reading-page.component.html
+++ b/src/app/reading_page/reading-page.component.html
@@ -27,12 +27,23 @@
   </header>
 
   <!-- ส่วนเนื้อหา (Reading Content) -->
-  <main class="max-w-2xl mx-auto p-4 space-y-4">
+  <main class="max-w-2xl mx-auto ">
     <!-- รูปภาพแต่ละตอน -->
-    <img src="/favicon.ico" alt="ตอนที่ 1" class="w-full h-auto rounded-lg shadow">
-    <img src="/favicon.ico" alt="ตอนที่ 2" class="w-full h-auto rounded-lg shadow">
-    <img src="/favicon.ico" alt="ตอนที่ 3" class="w-full h-auto rounded-lg shadow">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-1.jpg" alt="ตอนที่ 1" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-2.jpg" alt="ตอนที่ 2" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-3.jpg" alt="ตอนที่ 3" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-4.jpg" alt="ตอนที่ 4" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-5.jpg" alt="ตอนที่ 5" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-6.jpg" alt="ตอนที่ 6" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-7.jpg" alt="ตอนที่ 7" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-8.jpg" alt="ตอนที่ 8" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-9.jpg" alt="ตอนที่ 9" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-10.jpg" alt="ตอนที่ 10" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-11.jpg" alt="ตอนที่ 11" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-12.jpg" alt="ตอนที่ 12" class="w-full h-auto ">
+    <img src="/Chronicles-of-the-Demon-Faction-ep/Chronicles-of-the-Demon-Faction-ep1-13.jpg" alt="ตอนที่ 13" class="w-full h-auto ">
   </main>
+
 
   <!-- ปุ่มก่อนหน้า / ถัดไป -->
   <nav class="max-w-2xl mx-auto flex justify-between p-4">
@@ -55,7 +66,7 @@
       </button>
     </div>
 
-    <!-- ตัวอย่างรายการคอมเมนต์ -->
+    <!-- คอมเมนต์ -->
     <div class="bg-gray-100 rounded p-3 shadow">
       <p class="text-sm text-gray-700">คอมเมนต์ที่ 1</p>
     </div>
