--- a/src/app/episodes/episodes.component.html
+++ b/src/app/episodes/episodes.component.html
@@ -1,7 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container ">
-    <img class="h-150 w-full object-scale-down" src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt="">
-</div>
+<img class="h-150 w-full object-scale-down" src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt="">
 <h2 class="pl-4 pb-4 font-bold text-xl text-center">Chronicles-of-the-Demon-Faction-ตำนานการเกิดใหม่ในลัทธิมาร</h2>
 <ul class="flex flex-row gap-3 pl-10 pb-4 opacity-50">
     <li class="hover:underline active:underline">หมวดหมู่</li>
@@ -19,8 +17,9 @@
 
 
 <!-- ปุ่ม -->
-<div class="container flex justify-center ">
-    <button class="bg-black hover:opacity-25 text-white text-center font-bold py-2 px-4 rounded-sm border-black w-full max-w-9/10">
+<div class="flex justify-center ">
+    <button
+        class="bg-black hover:opacity-25 text-white text-center font-bold py-2 px-4 rounded-sm border-black w-full max-w-9/10">
         อ่านตอนแรก
     </button>
 </div>
@@ -28,52 +27,47 @@
 <!-- content -->
 <div class="flex justify-center mt-6">
     <div class="w-full max-w-7xl pl-4">
-        <div class="flex flex-wrap justify-start gap-5">
-                       
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/I-Raised-the-Villains-Preciously.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 7</p>
+        <div class="flex flex-wrap justify-start gap-5 bg-red-500">
+            <div class="hover:scale-120">
+                <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
+                    <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
+                        class="w-full object-scale-down rounded-lg ">
+                    <p class="text-center mt-2 font-semibold">ตอนที่ 6</p>
+                </div>
             </div>
 
             <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/Juvenile-Offender.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 6</p>
-            </div>
-
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/Solo-Max-Level-Newbie.jpg" alt=""
+                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
                     class="w-full h-56 object-cover rounded-lg hover:opacity-50">
                 <p class="text-center mt-2 font-semibold">ตอนที่ 5</p>
             </div>
 
             <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/Spy-X-Family.png" alt=""
+                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
                     class="w-full h-56 object-cover rounded-lg hover:opacity-50">
                 <p class="text-center mt-2 font-semibold">ตอนที่ 4</p>
             </div>
 
             <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/The-Extras-Academy-Survival-Guide.jpg" alt=""
+                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
                     class="w-full h-56 object-cover rounded-lg hover:opacity-50">
                 <p class="text-center mt-2 font-semibold">ตอนที่ 3</p>
             </div>
 
             <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/The-Poison-Master-of-Sacheon-Tang-Clan.jpg" alt=""
+                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
                     class="w-full h-56 object-cover rounded-lg hover:opacity-50">
                 <p class="text-center mt-2 font-semibold">ตอนที่ 2</p>
             </div>
 
             <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon/The-World-After-the-end.jpg" alt=""
+                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
                     class="w-full h-56 object-cover rounded-lg hover:opacity-50">
                 <p class="text-center mt-2 font-semibold">ตอนที่ 1</p>
             </div>
+
 
         </div>
     </div>
 </div>
 <app-footer></app-footer>
-
