--- a/src/app/episodes/episodes.component.html
+++ b/src/app/episodes/episodes.component.html
@@ -26,8 +26,8 @@
 
 <!-- content -->
 <div class="flex justify-center mt-6">
-    <div class="w-full max-w-7xl pl-4">
-        <div class="flex flex-wrap justify-start gap-5 bg-red-500">
+    <div class="w-screen max-w-7xl pl-4">
+        <div class="flex flex-wrap justify-start gap-5 ">
             <div class="hover:scale-120">
                 <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
                     <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
@@ -36,34 +36,39 @@
                 </div>
             </div>
 
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 5</p>
+            <div class="hover:scale-120">
+                <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
+                    <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
+                        class="w-full object-scale-down rounded-lg ">
+                    <p class="text-center mt-2 font-semibold">ตอนที่ 5</p>
+                </div>
             </div>
-
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 4</p>
+            <div class="hover:scale-120">
+                <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
+                    <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
+                        class="w-full object-scale-down rounded-lg ">
+                    <p class="text-center mt-2 font-semibold">ตอนที่ 4</p>
+                </div>
             </div>
-
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 3</p>
+            <div class="hover:scale-120">
+                <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
+                    <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
+                        class="w-full object-scale-down rounded-lg ">
+                    <p class="text-center mt-2 font-semibold">ตอนที่ 3</p>
+                </div>
             </div>
-
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 2</p>
-            </div>
-
-            <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
-                <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
-                    class="w-full h-56 object-cover rounded-lg hover:opacity-50">
-                <p class="text-center mt-2 font-semibold">ตอนที่ 1</p>
+            <div class="hover:scale-120">
+                <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
+                    <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
+                        class="w-full object-scale-down rounded-lg ">
+                    <p class="text-center mt-2 font-semibold">ตอนที่ 2</p>
+                </div>
+            </div>            <div class="hover:scale-120">
+                <div class="flex flex-col items-center w-36 md:w-40 lg:w-48 xl:w-56">
+                    <img src="imagetoon\Chronicles-of-the-Demon-Faction.jpg" alt=""
+                        class="w-full object-scale-down rounded-lg ">
+                    <p class="text-center mt-2 font-semibold">ตอนที่ 1</p>
+                </div>
             </div>
 
 
